--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1997,7 +1997,10 @@ ul.meta-nav-top
                padding: 3px;
                vertical-align: middle;
                padding-left: 8px;
-            }            
+            }     
+            th{
+              padding-right: 3px;
+            }       
           }
           .btn{
             padding: 3px 5px;
