--- a/httpdocs/theme/flatui/less/explore_index.less
+++ b/httpdocs/theme/flatui/less/explore_index.less
@@ -91,15 +91,17 @@
 				text-decoration: underline;
 			}
 			.newsrow{
-				display: block;
+				display: flex;
 				width: 100%;
+				padding-top: 3px;
 			}
 			span.date{
 				font-size: smaller; text-align:right
 			}
 			span.newscomments{
 				font-size: smaller;  
-				float: right;
+				flex:1;
+				text-align: right;
 			}
 		}
 	}
