--- a/application/modules/default/views/scripts/home/partials/featured-products.phtml
+++ b/application/modules/default/views/scripts/home/partials/featured-products.phtml
@@ -19,84 +19,102 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
-
-  $pageCount = $this->featureProducts->count();
-?>
-    <div id="featureProducts" class="" style=" height:100%">
-        <div id="featureProducts-content" style="height:100%; width: 100%; padding-top: 30px;padding-bottom: 30px">
-        <?php
         $helpTruncate = new Default_View_Helper_Truncate();
         $helpImage = new Default_View_Helper_Image();
         $helpProductUrl = new Default_View_Helper_BuildProductUrl();
         $helpCategories = new Default_View_Helper_FetchCategoriesForProductAsString();
         $helpMemberUrl = new Default_View_Helper_BuildMemberUrl();
         $helpDate = new Default_View_Helper_PrintDate();
+        //$pageCount = $this->featureProducts->count();
+?>
+    <div id="featureProducts"  class="carousel slide" data-ride="carousel" data-interval="false">       
+       
+        <div id="featureProducts-content"  class="carousel-inner">
+        <?php        
         foreach ($this->featureProducts as $this->product): ?>            
-                    <div class="col-lg-12">
-                      
-                        <div style="width: 1000px; display: block;margin:0 auto; border:1px solid #DFDCDA; border-radius: 3px; background-color: white;">
-                            <a style="float: left; margin-right: 20px" title="<?=$helpTruncate->truncate($this->product['description'], 200, '...', false, true)?>" href="<?=$helpProductUrl->buildProductUrl($this->product['project_id'],'')?>">
-                               <img class="productimg " src="<?=$helpImage->Image($this->product['image_small'], array('width' => 500, 'height' => 300))?>"  style="width: 500px; max-height: 300px; "/>
-                            </a>
-                               <div class="" style="display:block; width:450px; float:right; margin-right:20px;padding-top: 10px">
-                               <a href="<?=$helpProductUrl->buildProductUrl($this->product['project_id'],'')?>"><?=$this->product['title']?></a>
-                               <span  style="display: block; font-size: small;"><?=$helpCategories->fetchCategoriesForProductAsString($this->product['project_id'])?> </span>
+                    <div style=" " class="feature_container">                      
+                        
+                            <span  class="feature_title">In the Spotlight</span>
+                         
+                        <div  class="main_container">
+                               
+                             <span class="small label label-info label_featured" style="float: right; <?php if($this->product['featured']<>1) echo 'visibility:hidden'; ?>">                                    
+                                    Featured
+                            </span>   
+                                                        
+                              <a class="feature_image"  title="<?=$helpTruncate->truncate($this->product['description'], 200, '...', false, true)?>" href="<?=$helpProductUrl->buildProductUrl($this->product['project_id'],'')?>">
+                                 <img  src="<?=$helpImage->Image($this->product['image_small'], array('width' => 300, 'height' => 230 ,'crop' => 1))?>"  />
+                              </a>
 
-                               <span style="display:block; padding-top: 10px; font-size: small;">
-                               <a href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['member_id']); ?>" style="float: left">
+                               <div class="feature_text">
+                               <div style="display: flex">
+                                        <div class="feature_category" style=""><a href="<?=$helpProductUrl->buildProductUrl($this->product['project_id'],'')?>"><?=$this->product['title']?></a>
+                                                  <span  class="feature_text_title" ><?=$helpCategories->fetchCategoriesForProductAsString($this->product['project_id'])?> </span>
+                                        </div>
+                                        <div class="feature_rating" >
+                                              <div class="rating" >
+                                                  <?php                
+                                                          $this->widgetRating = new stdClass();
+                                                          $this->widgetRating->project_id = $this->product['project_id'];
+                                                          $this->widgetRating->laplace_score = $this->product['laplace_score'];
+                                                          $this->widgetRating->count_likes = $this->product['count_likes']; 
+                                                          $this->widgetRating->count_dislikes =$this->product['count_dislikes'];
+                                                          echo $this->render('partials/widgetRating.phtml'); 
+                                                  ?>
+                                              </div>
+                                              <span class="time text-center" style="font-size: smaller;display: block"><?=$helpDate->printDate($this->product['changed_at']==null?$this->product['created_at']:$this->product['changed_at'])?>
+                                              </span>
+                                        </div>
+                                </div>
+                               <div class="feature_text_auth" >
+                               <a  class="auto_link" href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['member_id']); ?>" >
                                    <figure >
-                                       <img src="<?php echo $helpImage->Image($this->product['profile_image_url'], array('width' => '50', 'height' => '50', 'crop' => 2)); ?>" style="width: 30px; height: 30px; border-radius: 50%"/>
-                                   </figure>
-                                        
+                                       <img src="<?php echo $helpImage->Image($this->product['profile_image_url'], array('width' => '50', 'height' => '50', 'crop' => 2)); ?>" />
+                                   </figure>                                        
                                </a>
-                                  <span style="line-height:2; padding-left:5px;"> created by <?php echo $this->product['username']; ?> </span>
-                               </span>
+                                  <span class="created_by" > created by <?php echo $this->product['username']; ?> </span>
+
+                                  
+                               </div>
                               
 
-                                <span style="display: block; font-size: small;margin-top:10px;">
-                                <?php
-                                    //$count_plingers = $this->product['count_plingers'];
-                                    $count_comments = $this->product['count_comments'];
-                                    
-                                    //echo ($count_plingers>0 ? '<span class="cntSupporters" style="padding-right:20px">'.$count_plingers.' supporter':'').($count_plingers>1?'s':'').($count_plingers>0?'</span>':'') ;
-                                    echo ($count_comments>0 ? '<span class="cntComments">'.$count_comments.' comment':'').($count_comments>1?'s':'').($count_comments>0?'</span>':'') ;
-                                    
+                                <span class="feature_text_comments" >
+                                <?php                                    
+                                    $count_comments = $this->product['count_comments'];                                                                        
+                                    echo ($count_comments>0 ? '<span class="cntComments">'.$count_comments.' comment':'').($count_comments>1?'s':'').($count_comments>0?'</span>':'') ;                                    
                                 ?>
                                 </span>
                                 
-                                <span style="display: block; font-size: small;padding-top: 15px">                                  
-                                        <?=$helpTruncate->truncate($this->product['description'], 400, '...', false, true)?>
+                                <span class="feature_text_description" >                                  
+                                        <?=$helpTruncate->truncate($this->product['description'], 300, '...', false, true)?>
                                 </span>
-                                <div class="rating" style="width: 100%;font-size: small;padding-top: 20px; ">
-                                    <?php                
-                                            $this->widgetRating = new stdClass();
-                                            $this->widgetRating->project_id = $this->product['project_id'];
-                                            $this->widgetRating->laplace_score = $this->product['laplace_score'];
-                                            $this->widgetRating->count_likes = $this->product['count_likes']; 
-                                            $this->widgetRating->count_dislikes =$this->product['count_dislikes'];
-                                            echo $this->render('partials/widgetRating.phtml'); 
-                                    ?>
-                                </div>
-                                <span class="time text-center" style="font-size: small;display: block"><?=$helpDate->printDate($this->product['changed_at']==null?$this->product['created_at']:$this->product['changed_at'])?>
-                                </span>
+                                
+                          
+
 
                                 </div>
+                              
+                                  <div style="clear: left"></div>
+                                  <span class="button_next small">
+                                         <a type="button" class="ajaxPartialFeatureProduct" style="padding-right: 20px" href="/showfeatureajax/page/0">random</a>                                          
+                                         <a type="button" class="ajaxPartialFeatureProduct" href="/showfeatureajax/page/1">featured</a>                                          
+                                 </span>   
 
-                              <div style="clear: both"></div>
-                          </div>
-
-                         
-                           
+                          </div>      
+                                                                   
                     </div>                           
-        <?php endforeach;?>
-
-        
-         <div class="" style=" height: 30px; float: right ">        
-                <?php if ($pageCount > 1) echo $this->paginationControl($this->featureProducts, 'Sliding', 'home/partials/paginationControl.phtml',
-                    array('params' => array(), 'dom_target' => 'div#featureProductsContainer')); ?>
-        </div>  
+        <?php endforeach;?>        
         
       </div>
+
+         
+           <?php /*
+       <?php if ($pageCount > 1) echo $this->paginationControl($this->featureProducts, 'Sliding', 'home/partials/paginationControl.phtml',
+                    array('params' => array(), 'dom_target' => 'div#featureProductsContainer')); 
+                    ?>
+                    */
+              ?>
+        
     </div>
 
     
