--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1996,7 +1996,11 @@ ul.meta-nav-top
             td{
                padding: 3px;
                vertical-align: middle;
-            }            
+               padding-left: 8px;
+            }     
+            th{
+              padding-right: 3px;
+            }       
           }
           .btn{
             padding: 3px 5px;
