--- a/application/modules/default/views/scripts/home/index-plingcom.phtml
+++ b/application/modules/default/views/scripts/home/index-plingcom.phtml
@@ -19,7 +19,200 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
+
+$modelInfo = new Default_Model_Info();
+$this->comments = $modelInfo->getLatestComments(10);
+$this->users = $modelInfo->getNewActiveMembers(18);
+$this->supporters = $modelInfo->getNewActiveSupporters(18);
+
+
+$this->productsThemesGTK = $modelInfo->getLastProductsForHostStores(5,"366,363,273,267,138,125,131,153,154,414,133");
+$this->productsThemesPlasma = $modelInfo->getLastProductsForHostStores(5,"365,119,123,266,114,118,349,417,101,100,111,422,423,446,417");
+$this->productsWindowmanager = $modelInfo->getLastProductsForHostStores(5,"117,267,139,143,142,140,141,144");
+$this->productsIconsCursors= $modelInfo->getLastProductsForHostStores(5,"386,107");
+$this->productsScreenshots= $modelInfo->getLastProductsForHostStores(5,"225,445");
+$this->productsApps = $modelInfo->getLastProductsForHostStores(5,233);
+$this->productsAddons = $modelInfo->getLastProductsForHostStores(5,"152");
+$this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,295);
+
+$this->countSupporters = $modelInfo->getCountActiveSupporters();
+
+$featuredProducts = $modelInfo->getFeaturedProductsForHostStores(100);
+if ($featuredProducts->getTotalItemCount()) {  
+    $request = Zend_Controller_Front::getInstance()->getRequest();
+    $offset = (int)$request->getParam('page');
+    $irandom = rand(1,$featuredProducts->getTotalItemCount());    
+    $featuredProducts->setItemCountPerPage(1);
+    $featuredProducts->setCurrentPageNumber($irandom);
+    $this->featureProducts = $featuredProducts;
+}
+
+$helperBuildMemberUrl = new Default_View_Helper_BuildMemberUrl();
+$helperImage = new Default_View_Helper_Image();
+$helpPrintDate = new Default_View_Helper_PrintDate();
 ?>
+<main id="explore-content" class="startpage-store " >
+<div class="GridFlex">
+<div class="GridFlex-cell sidebar-left">  
+        <?php  echo $this->render('explore/partials/filter.phtml'); ?> 
+</div>
+<div class="GridFlex-cell content">   
+        <div class="contentcontainer">
+                       
 
-<?php  echo $this->render('home/index-opendesktop.phtml');
+                        <div class="row">   
+                        <?php                                 
+                                    echo $this->partial('/home/partials/product_group.phtml', array(
+                                            "title"  => "GTK/Gnome",
+                                            "products" => $this->productsThemesGTK,
+                                            "catIDs" =>"366"
+                                        )
+                                    );       
+                                 
+                                    echo $this->partial('/home/partials/product_group.phtml', array(
+                                            "title"  => "KDE Plasma",
+                                            "products" => $this->productsThemesPlasma,
+                                            "catIDs" =>"365"   
+                                        )
+                                    );                                       
+                        ?>                                                      
+                        </div>
 
+                        <div class="row blockpadding">   
+                        <?php                                 
+                                    echo $this->partial('/home/partials/product_group.phtml', array(
+                                            "title"  => "Window Managers",
+                                            "products" => $this->productsWindowmanager,
+                                            "catIDs" =>"147"   
+                                        )
+                                    );       
+                                    
+                                    echo $this->partial('/home/partials/product_group.phtml', array(
+                                            "title"  => "Icons, Cursors",
+                                            "products" => $this->productsIconsCursors,
+                                            "catIDs" =>"386,107"   
+                                        )
+                                    );                                           
+                        ?>                                                                                                                        
+                        </div>
+
+                        <div class="row blockpadding">
+                        <?php                                 
+                                    echo $this->partial('/home/partials/product_group.phtml', array(
+                                            "title"  => "Concepts, Screenshots",
+                                            "products" => $this->productsScreenshots,
+                                            "catIDs" =>"445,225"   
+                                        )
+                                    );                                                                     
+
+                                    echo $this->partial('/home/partials/product_group.phtml', array(
+                                            "title"  => "Wallpapers",
+                                            "products" => $this->productsWallpapers,
+                                            "catIDs" =>"295"   
+
+                                        )
+                                    );                                        
+                        ?>                                                                                                          
+                        </div>
+                        <div class="row blockpadding" >
+                         <?php                                 
+                                     echo $this->partial('/home/partials/product_group.phtml', array(
+                                             "title"  => "App Add-Ons",
+                                             "products" => $this->productsAddons,
+                                             "catIDs" =>"152"   
+                                         )
+                                     );       
+                                
+                                     echo $this->partial('/home/partials/product_group.phtml', array(
+                                             "title"  => "Applications",
+                                             "products" => $this->productsApps,
+                                             "catIDs" =>"233"   
+                                         )
+                                     );      
+                                                        
+                         ?>                                         
+                        </div>
+
+                        <div class="row blockpadding supportersrow">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <?php                                 
+                                        echo $this->partial('/home/partials/users.phtml', array(
+                                                "title"  => "Latest  Active Supporters",
+                                                "users" => $this->supporters
+                                            )
+                                        );                   
+                            ?>                                                              
+                            </div>
+                        </div>
+
+                        <div class="row blockpadding">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <?php                                 
+                                        echo $this->partial('/home/partials/users.phtml', array(
+                                                "title"  => "Latest  Community Members ",
+                                                "users" => $this->users
+                                            )
+                                        );                   
+                            ?>                                               
+                            </div>
+                        </div>                        
+             </div>
+</div>
+<div class="GridFlex-cell sidebar-right">   
+        <aside  id="explore-sidebar" > 
+
+        <?php
+            echo $this->render('/home/partials/common_rightsidebar.phtml');
+        ?>
+            
+            
+        <div>
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- Responsive New Displayblock -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-1150932386931372"
+                 data-ad-slot="1024407251"
+                 data-ad-format="auto"></ins>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+
+            </script>
+        </div>
+       
+        </aside>
+</div>
+</div>
+
+<div class="tooltip_templates" style="display: none">
+    <span id="tooltip_content">
+        <i class="fa fa-spinner"></i>
+    </span>
+</div>
+</main>
+
+<script type="application/javascript">
+    $(document).ready(function () {
+        $('body').on('click', '.ajaxPartialFeatureProduct', function (event) {
+            event.preventDefault();            
+            $(this).off();                  
+            var target = '#featureProductsContainer';  
+            if($(this).hasClass( "disabled" )) return false;
+            var url = $(this).attr("href");                        
+            $(target).load(url, function (response, status, xhr) {
+                if (status == "error") {
+                    $(target).empty().html('Service is temporarily unavailable. Our engineers are working quickly to resolve this issue. <br/>Find out why you may have encountered this error.');
+                }                
+            });
+            
+            return false;
+        });
+    });
+</script>
+
+<?php $this->inlineScript()->appendScript(
+    '    $(document).ready(function(){                                             
+                TooltipUser.setup("tooltipuser","right");
+                TooltipUser.setup("tooltipuserleft","left");             
+            });
+        ');
