--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -174,12 +174,39 @@ if ($this->countDownloadsOverall > 0) {
                         <span><?= $product['num_downloads'] * $product['dl_pling_factor'] ?></span>
                     </div> */ ?>
                     <div class="col-md-2 text-right cell-default">
-                        <span><?= $currency->toCurrency($product['num_downloads'] * $product['dl_pling_factor'] / 100) ?></span>
+                        <span>
+                        <?php 
+                            $errorMsg = "<ul>";
+                            $showErrMsg = false;
+                            if($product['is_license_missing_now'] == 1) {
+                                $errorMsg .= "<li>License was not specified</li>";
+                                $showErrMsg = true;
+                            }
+                            if($product['is_source_missing_now'] == 1) {
+                                $errorMsg .= "<li>Source was not specified</li>";
+                                $showErrMsg = true;
+                            }
+                            if($product['is_pling_excluded_now'] == 1) {
+                                $errorMsg .= "<li>This Product was excluded from plings</li>";
+                                $showErrMsg = true;
+                            }
+                            $errorMsg .= "</ul>";
+                            
+                            if($showErrMsg) {
+                                echo '<div class="inline msg-popover-danger" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Payout requirements not fulfilled" data-trigger="hover" data-html="true" data-content="'.$errorMsg.'"><span style="color: #a94442;" class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span></div>';
+                            } else {
+                                print($currency->toCurrency($product['num_downloads'] * $product['dl_pling_factor'] / 100));
+                            }
+                        ?>
+                        </span>
+                        
                     </div>
 
                 </div>
                 <?php
-                $sum_total_month += $product['num_downloads'] * $product['dl_pling_factor'];
+                if(!$showErrMsg) {       
+                    $sum_total_month += $product['num_downloads'] * $product['dl_pling_factor'];
+                }
                 $sum_total_text = 'Possible payout for this month (<span style="font-size: smaller;">*</span>):';
                 $sum_total_payout = $currency->toCurrency($sum_total_month/100);
                 $payout_success = false;
@@ -288,6 +315,10 @@ if ($this->countDownloadsOverall > 0) {
             template : '<div class="popover alert alert-success alert-block" role="tooltip"><div class="popover-arrow"></div><h3 class="popover-title"></h3><div class="popover-content"></div></div>'
         });
         $(".payout-popover-danger").popover({
+            html : true,
+            template : '<div class="popover alert alert-danger alert-block" role="tooltip"><div class="popover-arrow"></div><h3 class="popover-title"></h3><div class="popover-content"></div></div>'
+        });
+        $(".msg-popover-danger").popover({
             html : true,
             template : '<div class="popover alert alert-danger alert-block" role="tooltip"><div class="popover-arrow"></div><h3 class="popover-title"></h3><div class="popover-content"></div></div>'
         });
