--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -291,7 +291,7 @@ if ($this->countDownloadsOverall > 0) {
 ?>
     <div id="le-alert"  class="alert alert-warning alert-block" role="alert">
         <p>(*) Info:</p><p>This service will become active on May, 1st 2017. All previous months are shown for internal testing only. </p>
-        <p>This live phase is considered Beta until the end of the year, during which we will test payment services like Paypal or Bitcoin.</p>
+        <p>This service is considered Beta until othwise announced.</p>
         <br>
         <p>TOS:</p>
         <p>This payout service is completely voluntarily. It is within Hive01's full rights to decide at any time:</p>
@@ -299,6 +299,7 @@ if ($this->countDownloadsOverall > 0) {
         <p>b) how much of the shown calculated amount is to be paid or</p>
         <p>c) to cancel partly or complete payment without giving any reasons (reasons are most likely cheating or inflating download numbers).</p>
         <p>d) Any PLING-FACTOR can be changed at any time and any rate (even to "0") to adjust the payout amount for products, even for a previous still to-be-paid-out pending month as long as it has not been paid out yet.</p>
+        <p><br>All products require a valid license. Certain products also require a link to the source-code. If we doubt those requirements are set in good face, we reserve the right to exclude a product completely at any time. </p>
         <p><br>A valid PayPal address must be maintained in your settings at the time of the payout. 
             The total payout amount for a completed month must be at least one dollar. 
             Lesser amounts will not be paid out and can not be transferred to the next month. 
