--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -50,7 +50,9 @@
 <ul class="nav nav-tabs margin-bottom-10">
 <?php
     
-if ($this->countDownloadsOverall > 0) {    
+$isCurrentMonth = false;
+if ($this->countDownloadsOverall > 0) {  
+    
     $currentMonth = '';
     $monthlyDownload = null;
     $allDownloads = array();
@@ -66,6 +68,9 @@ if ($this->countDownloadsOverall > 0) {
         
         if($printDateNow == $printDate) {
             $printDate = 'Current month';
+            $isCurrentMonth = true;
+        } else {
+            $isCurrentMonth = false;
         }
         
         if ($printDate != $currentMonth) {
@@ -174,12 +179,55 @@ if ($this->countDownloadsOverall > 0) {
                         <span><?= $product['num_downloads'] * $product['dl_pling_factor'] ?></span>
                     </div> */ ?>
                     <div class="col-md-2 text-right cell-default">
-                        <span><?= $currency->toCurrency($product['num_downloads'] * $product['dl_pling_factor'] / 100) ?></span>
+                        <span>
+                        <?php 
+                            $errorMsg = "<ul>";
+                            $showErrMsg = false;
+                            
+                            if($isCurrentMonth) {
+                                if($product['is_license_missing_now'] == 1) {
+                                    $errorMsg .= "<li>License was not specified</li>";
+                                    $showErrMsg = true;
+                                }
+                                if($product['is_source_missing_now'] == 1) {
+                                    $errorMsg .= "<li>Source was not specified</li>";
+                                    $showErrMsg = true;
+                                }
+                                if($product['is_pling_excluded_now'] == 1) {
+                                    $errorMsg .= "<li>This Product was excluded from plings</li>";
+                                    $showErrMsg = true;
+                                }
+                            } else {
+                                if($product['is_license_missing'] == 1) {
+                                    $errorMsg .= "<li>License was not specified</li>";
+                                    $showErrMsg = true;
+                                }
+                                if($product['is_source_missing'] == 1) {
+                                    $errorMsg .= "<li>Source was not specified</li>";
+                                    $showErrMsg = true;
+                                }
+                                if($product['is_pling_excluded'] == 1) {
+                                    $errorMsg .= "<li>This Product was excluded from plings</li>";
+                                    $showErrMsg = true;
+                                }
+                            }
+                            $errorMsg .= "</ul>";
+                            
+                            if($showErrMsg) {
+                                echo '<div class="inline msg-popover-danger" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Payout requirements not fulfilled" data-trigger="hover" data-html="true" data-content="'.$errorMsg.'"><span style="color: #a94442;" class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span></div>';
+                            } else {
+                                print($currency->toCurrency($product['num_downloads'] * $product['dl_pling_factor'] / 100));
+                            }
+                        ?>
+                        </span>
+                        
                     </div>
 
                 </div>
                 <?php
-                $sum_total_month += $product['num_downloads'] * $product['dl_pling_factor'];
+                if(!$showErrMsg) {       
+                    $sum_total_month += $product['num_downloads'] * $product['dl_pling_factor'];
+                }
                 $sum_total_text = 'Possible payout for this month (<span style="font-size: smaller;">*</span>):';
                 $sum_total_payout = $currency->toCurrency($sum_total_month/100);
                 $payout_success = false;
@@ -243,7 +291,7 @@ if ($this->countDownloadsOverall > 0) {
 ?>
     <div id="le-alert"  class="alert alert-warning alert-block" role="alert">
         <p>(*) Info:</p><p>This service will become active on May, 1st 2017. All previous months are shown for internal testing only. </p>
-        <p>This live phase is considered Beta until the end of the year, during which we will test payment services like Paypal or Bitcoin.</p>
+        <p>This service is considered Beta until othwise announced.</p>
         <br>
         <p>TOS:</p>
         <p>This payout service is completely voluntarily. It is within Hive01's full rights to decide at any time:</p>
@@ -251,6 +299,7 @@ if ($this->countDownloadsOverall > 0) {
         <p>b) how much of the shown calculated amount is to be paid or</p>
         <p>c) to cancel partly or complete payment without giving any reasons (reasons are most likely cheating or inflating download numbers).</p>
         <p>d) Any PLING-FACTOR can be changed at any time and any rate (even to "0") to adjust the payout amount for products, even for a previous still to-be-paid-out pending month as long as it has not been paid out yet.</p>
+        <p><br>All products require a valid license. Certain products also require a link to the source-code. If we doubt those requirements are set in good faith, we reserve the right to exclude a product completely at any time. </p>
         <p><br>A valid PayPal address must be maintained in your settings at the time of the payout. 
             The total payout amount for a completed month must be at least one dollar. 
             Lesser amounts will not be paid out and can not be transferred to the next month. 
@@ -288,6 +337,10 @@ if ($this->countDownloadsOverall > 0) {
             template : '<div class="popover alert alert-success alert-block" role="tooltip"><div class="popover-arrow"></div><h3 class="popover-title"></h3><div class="popover-content"></div></div>'
         });
         $(".payout-popover-danger").popover({
+            html : true,
+            template : '<div class="popover alert alert-danger alert-block" role="tooltip"><div class="popover-arrow"></div><h3 class="popover-title"></h3><div class="popover-content"></div></div>'
+        });
+        $(".msg-popover-danger").popover({
             html : true,
             template : '<div class="popover alert alert-danger alert-block" role="tooltip"><div class="popover-arrow"></div><h3 class="popover-title"></h3><div class="popover-content"></div></div>'
         });
