update for opendesktop id server

--- a/application/modules/default/views/scripts/authorization/register.phtml
+++ b/application/modules/default/views/scripts/authorization/register.phtml
@@ -41,10 +41,10 @@ $helperImage = new Default_View_Helper_Image();
 
                     <div id="social-login-elements">
                         <div class="register-facebook">
-                            <p class="small center light greylight">Register</p>
-                            <a  href="/oauth/register/provider/github/" class="btn btn-block btn-social btn-github">
+                            <p class="small center light greylight">Register with</p>
+                            <a  href="/login/github/" class="btn btn-block btn-social btn-github">
                                 <span class="fa fa-github"></span>
-                                with Github
+                                <span class="small">Github</span>
                             </a>
                         </div>
 
