--- a/application/modules/default/views/scripts/authorization/login.phtml
+++ b/application/modules/default/views/scripts/authorization/login.phtml
@@ -47,20 +47,20 @@ $url_param_redirect = isset($this->redirect) ? 'redirect/'.$this->redirect : nul
 
                 <div id="social-login-elements">
                   <div class="register-facebook">
-                    <p class="small center light greylight">Login</p>
+                    <p class="small center light greylight">Login with</p>
                     <a  href="/login/github/<?=$url_param_redirect?>" class="btn btn-block btn-social btn-github">
                       <span class="fa fa-github"></span>
-                      with Github
+                      <span class="small">Github</span>
                     </a>
                   </div>
-<?php /*
+
                   <div class="bottom margin-top-15">
                     <a  href="/login/ocs/<?=$url_param_redirect?>" class="btn btn-block btn-social btn-github">
                         <span class="glyphicon glyphicon-log-in"></span>
-                        with Opendesktop ID
+                        <span class="small" style="padding-left:2px;">openDesktop ID</span>
                     </a>
                   </div>
-*/ ?>
+
                     <div class="bottom margin-top-15">
                     <div id="show-login-description" class="small light lightgrey">Join us?</div>
                     <div class="login2">
@@ -71,6 +71,7 @@ $url_param_redirect = isset($this->redirect) ? 'redirect/'.$this->redirect : nul
                     </div>
                   </div>
                 </div>
+
               </div>
         </section>
 
