--- a/application/modules/default/views/scripts/plings/index.phtml
+++ b/application/modules/default/views/scripts/plings/index.phtml
@@ -50,16 +50,24 @@
     </section>
     <section class="body-wrap" id="cat-list">
         <section class="wrapper">
-        	<div class="row title">
-        	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-	        	<span class="label lable-default left">
-	        		Category
-	        	</span>
-        		<span class="label lable-default right" >
-        			Pling Factor
-        		</span>
+            <div class="row title">
+        	<div class="col-md-6">
+                    <span class="label lable-default left">
+                            Category
+                    </span>
+                </div>
+                <div class="col-md-3">    
+                    <span class="label lable-default right" >
+                            Pling Factor
+                    </span>
+                </div>
+                <div class="col-md-3">
+                    <span class="label lable-default right" >
+                            Source-Code required
+                    </span>
+                    
         	</div>
-        	</div>            
+            </div>            
             <?php
             $categories = $this->listCategories();
             foreach ($categories as $key => $element) {                                	                                    
@@ -67,13 +75,23 @@
                 $cls = 'depth'.$depth;
                 $countSubCat = (int)$element['rgt'] - (int)$element['lft'] - 1;
                 $plingFactor='';
+                $sourceRequired='';
                 if($countSubCat==0){
-                	$plingFactor = '<span class="right factor">'. $element['dl_pling_factor'].'</span>';                                       
+                	$plingFactor = '<span class="right factor">'. $element['dl_pling_factor'].'</span>';  
+                        $sourceRequired = ($element['source_required']?'Yes':'No');
                 }
+                /*
                 echo '<div class="row">'; 
                 echo '<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 '.$cls.'">' . $this->translate($element['title']) 
-                      . $plingFactor.'</div>';                                                                                
+                      . $plingFactor.'<span class="right factor">' . $element['source_required'].'</span></div>';                                                                                
                 echo '</div>';
+                */
+                echo '<div class="row" style="padding-left: 15px; padding-right: 15px;">';
+                echo '    <div class="col-md-6 cell-default '.$cls.'">'. $this->translate($element['title']).'</div>';
+                echo '    <div class="col-md-3 text-right cell-default">'.$plingFactor.'</div>';
+                echo '    <div class="col-md-3 text-right cell-default">'.$sourceRequired.'</div>';
+                echo '</div>   ';
+                
             }
             ?>
                           
