--- a/application/modules/default/views/scripts/plings/index.phtml
+++ b/application/modules/default/views/scripts/plings/index.phtml
@@ -44,7 +44,7 @@
         <p></p>
         <p>In order to receive your Plings, you need to provide a valid PayPal option under your OpenDesktop account settings.</p>
         <!--<p>We are currently evaluating using Bitcoin as a payout method in the future.-->
-        <p>All products require a valid license. Certain products also require a link to the source-code. If we doubt those requirements are set in good faith, we reserve the right to exclude a product completely at any time.</p>
+        <p>All products require a valid libre license. Certain products also require a link to a source hosting online site like e.g. GitHub (see list below). This is different from just the source-code, but to provide an easy setup or colaboration and transparent changes.</p>
         <p></p>
         <p>We hope this form of compensation values those who put time and effort into creating free and open source software & content and leads to an ever increase of quality and sustainability.        </p>
             
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-md-3">
                     <span class="label lable-default right" >
-                            Source-Code required
+                            Source-Link required
                     </span>
                     
         	</div>
